--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -7,9 +7,27 @@ en:
       mark: '*'
       # You can uncomment the line below if you need to overwrite the whole required html.
       # When using html, text and mark won't be used.
-      # html: '<abbr title="required">*</abbr>'
+      html: '<abbr title="required">*</abbr>'
     error_notification:
       default_message: "Please review the problems below:"
+      
+    placeholders:
+      quote:
+        name: Name of your quote
+    labels:
+      quote:
+        name: Name
+      line_item_date:
+        date: Date
+
+  helpers:
+    submit:
+      quote:
+        create: Create quote
+        update: Update quote
+      line_item_date:
+        create: Create date
+        update: Update date
     # Examples
     # labels:
     #   defaults:
